# network

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.integration  README.md  ROADMAP.md  clrn.sh  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  run.sh  ws-test.html
.github/workflows/: cd.yml  ci.yml
assessment-reports/: 00-master-assessment.md  01-project-structure.md  02-p2p-enr-bridge.md  03-economics-backend.md  04-enr-ui-integration.md  05-stress-test-gaps.md
blocker-fixes/: 00-blocker-fix-summary.md  01-ignored-tests-analysis.md  01-integration-tests-FIXED.md  02-websocket-enr-FIXED.md  02-websocket-enr-gap.md  03-testcluster-limits-FIXED.md  03-testcluster-limits.md  04-partition-simulator-IMPLEMENTED.md  04-partition-simulator-design.md  VALIDATION-COMPLETE.md
crates/mycelial-core/: Cargo.toml
crates/mycelial-core/src/: config.rs  content.rs  credit.rs  error.rs  event.rs  identity.rs  lib.rs  location.rs  message.rs  module.rs  peer.rs  reputation.rs
crates/mycelial-meshtastic/: Cargo.toml  README.md  build.rs
crates/mycelial-meshtastic/src/: bridge.rs  cache.rs  compression.rs  config.rs  error.rs  lib.rs  mapper.rs  test_utils.rs  translator.rs
crates/mycelial-meshtastic/src/interface/: ble.rs  mod.rs  serial.rs  tcp.rs
crates/mycelial-meshtastic/tests/: integration_tests.rs
crates/mycelial-network/: Cargo.toml
crates/mycelial-network/src/: behaviour.rs  config.rs  economics.rs  error.rs  event.rs  lib.rs  partition.rs  peer.rs  service.rs  service_tests.rs  transport.rs
crates/mycelial-network/src/enr_bridge/: P0-ENR-BRIDGE-IMPLEMENTATION.md  credits.rs  gradient.rs  messages.rs  mod.rs  nexus.rs  septal.rs
crates/mycelial-network/src/raft/: config.rs  mod.rs  types.rs
crates/mycelial-network/src/raft/sprint2/: network.rs  state_machine.rs  storage.rs
crates/mycelial-network/tests/: README.md  gate_credits.rs  gate_election.rs  gate_gradient.rs  partition_test.rs  stress_credits.rs  stress_election.rs  stress_node_harness.rs  stress_partition.rs  stress_septal.rs
crates/mycelial-network/tests/helpers/: cluster.rs  mod.rs
crates/mycelial-network/tests/stress/: credits.rs  election.rs  node_harness.rs  partition.rs  septal.rs
crates/mycelial-node/: Cargo.toml
crates/mycelial-node/src/: main.rs
crates/mycelial-node/src/server/: economics_state.rs  messages.rs  mod.rs  rest.rs  websocket.rs
crates/mycelial-node/tests/integration/: dashboard_compatibility.rs  mod.rs  rest_api.rs  rest_handlers.rs  websocket_handlers.rs  websocket_messages.rs
crates/mycelial-protocol/: Cargo.toml
crates/mycelial-protocol/src/: codec.rs  lib.rs  messages.rs
crates/mycelial-state/: Cargo.toml
crates/mycelial-state/migrations/: 001_initial.sql
crates/mycelial-state/src/: cache.rs  error.rs  lib.rs  storage.rs  sync.rs
crates/mycelial-wasm/: Cargo.toml
crates/mycelial-wasm/src/: lib.rs
dashboard/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  start.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/src/__tests__/: setup.ts
dashboard/src/__tests__/hooks/: useP2P.test.ts
dashboard/src/__tests__/mocks/: websocket.ts
dashboard/src/components/: ChatPanel.tsx  ElectionPanel.tsx  EnrCreditPanel.tsx  GradientPanel.tsx  PeerGraph.tsx  ReputationCard.tsx  SeptalPanel.tsx  WorkloadList.tsx
dashboard/src/hooks/: useEconomicsAPI.ts  useOrchestrator.ts  useP2P.ts
docs/: ARCHITECTURE.md  BOOTSTRAP-PATH.md  CLOUD-DEPLOYMENT.md  ENR-UI-TESTING.md  PHASE6_ECONOMICS.md  PROGRESS-2025-12-31.md  QUICKSTART.md  SESSION_2025-12-18.md  TESTING_ROADMAP.md  WireENR-Doc.md  integration-testing.md  planetserve-integration-analysis.md
docs/OpenRaft/: README.md
docs/architecture/: ADR-001-workspace-structure.md  ADR-002-meshtastic-integration.md
scripts/: crt_ws.sh  pre-pr-check.sh  start-full-cluster.sh
stress-test-results/: design-credit-tests.md  design-election-tests.md  design-node-harness.md  design-partition-tests.md  design-septal-tests.md
