[workspace]
resolver = "2"
members = [
    "crates/mycelial-core",
    "crates/mycelial-network",
    "crates/mycelial-protocol",
    "crates/mycelial-state",
    "crates/mycelial-wasm",
    "crates/mycelial-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Univrs.io Contributors"]
license = "MIT"
repository = "https://github.com/univrs/mycelial-p2p-bootstrap"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "quic",
    "noise",
    "gossipsub",
    "kad",
    "identify",
    "dns",
    "tcp",
    "yamux",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"

# Univrs shared crates
univrs-identity = { path = "../univrs-identity" }
univrs-state = { path = "../univrs-state" }
univrs-enr = { path = "../univrs-enr" }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# WASM (for mycelial-wasm only)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
lru = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
