[package]
name = "mycelial-meshtastic"
version.workspace = true
edition.workspace = true
description = "Meshtastic LoRa mesh bridge for the mycelial P2P network"
keywords = ["meshtastic", "lora", "mesh", "p2p", "bridge"]
categories = ["network-programming", "embedded"]

[features]
default = []
# Enable serial port interface (requires libudev-dev on Linux)
# Install with: apt install libudev-dev pkg-config
serial = ["dep:tokio-serial", "dep:serialport"]
# Enable Bluetooth Low Energy interface
ble = ["dep:btleplug"]
# Enable TCP interface (for Meshtastic devices with network)
tcp = []
# Enable all interfaces
full = ["serial", "tcp"]

[dependencies]
# Mycelial crates
mycelial-core = { path = "../mycelial-core" }
mycelial-protocol = { path = "../mycelial-protocol" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "io-util", "macros"] }

# Serial communication (optional - requires system libs on Linux)
tokio-serial = { version = "5.4", optional = true }
serialport = { version = "4.6", optional = true }

# Protocol buffers
prost = "0.13"
bytes = { workspace = true }
humantime = { workspace = true }

# Caching and utilities
lru = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

# Compression (for economics messages over LoRa)
miniz_oxide = "0.8"

# Error handling & logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_cbor = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Optional BLE support
btleplug = { version = "0.11", optional = true }

# Device detection for hardware testing
glob = "0.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
