[package]
name = "mycelial-network"
version.workspace = true
edition.workspace = true

[features]
default = []
test-utils = []
openraft = ["dep:openraft", "dep:sled", "dep:bincode"]

[dependencies]
univrs-enr = { workspace = true }
serde_cbor = "0.11"
mycelial-core = { path = "../mycelial-core" }
mycelial-protocol = { path = "../mycelial-protocol" }
libp2p = { workspace = true, features = ["mdns"] }
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
lru.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
sha2 = "0.10"

# OpenRaft consensus (Phase 1)
openraft = { version = "0.9", features = ["serde"], optional = true }
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
univrs-enr = { workspace = true }
serde_cbor = "0.11"

[lints]
workspace = true
